# fenicsx-fus-gpu

./: .gitignore  README.md  demo_linear.py  demo_linear_box.py  demo_linear_wave.py  mass_operator.py  operators.py  precompute.py  stiffness_operator.py  sum_factorisation.py  test_boundary_operator.py  test_mass_operator.py  test_operators.py  test_stiffness_operator.py  time_operators.py
cpp/common/: Linear.hpp  permute.hpp  precompute.hpp  spectral_op.hpp  sum_factorisation.hpp
cpp/demo_linear_box/: CMakeLists.txt  forms.py  main.cpp
cpp/test_operators/: CMakeLists.txt  forms.py  main.cpp
cpp/time_operators/: CMakeLists.txt  forms.py  main.cpp
cuda/: cuda_mpi.py  demo_linear_box.py  demo_linear_piston.py  demo_nonlinear_bowl.py  demo_nonlinear_box.py  exp_kernel_speed.py  kernel_exp.sh  operators.py  precompute.py  scatterer.py  test_boundary_operator.py  test_mass_operator.py  test_operators.py  test_scatterer.py  test_stiffness_operator.py  time_operators.py  utils.py
fenicsx/: demo_linear.py  demo_linear_box.py  demo_linear_piston.py  mesh.xdmf
numba-cpu/: demo_linear_box.py  demo_linear_piston.py  operators.py  precompute.py  scatter.py  scatterer.py  sum_factorisation.py  test_operators.py  test_scatterer.py  time_operators.py  time_scatterer.py  utils.py
